# atlas

./: .gitignore  README.md  \
atlas-frontend/: .env  .env.example  :w  next.config.js  package-lock.json  package.json
atlas-frontend/src/api/: oauth.ts  resources.ts
atlas-frontend/src/api/announcements/: announcement.ts  dto.ts
atlas-frontend/src/api/assignments/: assignment.ts  dto.ts
atlas-frontend/src/api/cdn/: cdn.ts  dto.ts
atlas-frontend/src/api/classrooms/: classroom.ts  dto.ts
atlas-frontend/src/api/entries/: dto.ts  entry.ts
atlas-frontend/src/api/quizzes/: dto.ts  quiz.ts
atlas-frontend/src/api/units/: dto.ts  unit.ts
atlas-frontend/src/api/users/: dto.ts  user.ts
atlas-frontend/src/app/: client.tsx  globals.scss  home.module.scss  layout.tsx  page.tsx
atlas-frontend/src/app/announcements/: announcements.module.scss  client.tsx  page.tsx
atlas-frontend/src/app/assignments/: assignments.module.scss  client.tsx  page.tsx
atlas-frontend/src/app/landing/: landing.module.scss  page.tsx
atlas-frontend/src/app/quizzes/: page.tsx
atlas-frontend/src/components/announcement-preview/: announcement.module.scss  announcement.tsx
atlas-frontend/src/components/assignment-comments/: comments.module.scss  comments.tsx
atlas-frontend/src/components/assignment-preview/: assignment.tsx
atlas-frontend/src/components/class-banner/: banner.module.scss  banner.tsx
atlas-frontend/src/components/class-course/: course.module.scss  course.tsx
atlas-frontend/src/components/class-feed/: feed.module.scss  feed.tsx
atlas-frontend/src/components/class-people/: people.module.scss  people.tsx
atlas-frontend/src/components/class-preview/: class-preview.module.scss  class-preview.tsx
atlas-frontend/src/components/classroom-chip/: class-chip.module.scss  class-chip.tsx
atlas-frontend/src/utils/: token.server.ts
atlas-server/: .env  .env.example  Cargo.toml
atlas-server/crates/api/: Cargo.toml
atlas-server/crates/api/src/: lib.rs
atlas-server/crates/api_routes/: Cargo.toml
atlas-server/crates/api_routes/src/: lib.rs
atlas-server/crates/api_routes/src/announcements/: delete.rs  dto.rs  get.rs  mod.rs  post.rs
atlas-server/crates/api_routes/src/assignment_entries/: dto.rs  get.rs  post.rs  put.rs
atlas-server/crates/api_routes/src/assignment_messages/: dto.rs  post.rs
atlas-server/crates/api_routes/src/assignments/: dto.rs  get.rs  post.rs
atlas-server/crates/api_routes/src/classrooms/: delete.rs  dto.rs  get.rs  post.rs  put.rs
atlas-server/crates/api_routes/src/course_materials/: delete.rs  dto.rs  get.rs  mod.rs  post.rs
atlas-server/crates/api_routes/src/course_units/: delete.rs  dto.rs  get.rs  mod.rs  post.rs
atlas-server/crates/api_routes/src/files/: post.rs
atlas-server/crates/api_routes/src/pop_quizzes/: dto.rs  get.rs  mod.rs  post.rs
atlas-server/crates/api_routes/src/users/: delete.rs  dto.rs  get.rs  mod.rs
atlas-server/crates/db/: Cargo.toml
atlas-server/crates/db/src/: lib.rs
atlas-server/crates/db_crud/: Cargo.toml
atlas-server/crates/db_crud/src/: announcements.rs  assignment_entries.rs  assignment_messages.rs  assignments.rs  classrooms.rs  lib.rs  materials.rs  pop_quizzes.rs  units.rs  users.rs
atlas-server/crates/db_schema/: Cargo.toml
atlas-server/crates/db_schema/src/: models.rs  schema.rs
atlas-server/crates/utilities/: Cargo.toml
atlas-server/crates/utilities/src/: lib.rs
atlas-server/migrations/2023-12-17-022004_users/: up.sql
atlas-server/migrations/2023-12-17-022202_classrooms/: down.sql  up.sql
atlas-server/migrations/2023-12-17-024506_assignments/: down.sql  up.sql
atlas-server/migrations/2023-12-17-024913_assignment_entries/: down.sql  up.sql
atlas-server/migrations/2023-12-17-030806_assignment_messages/: down.sql  up.sql
atlas-server/migrations/2023-12-17-031025_announcements/: up.sql
atlas-server/migrations/2023-12-17-031025_announcments/: down.sql  up.sql
atlas-server/migrations/2023-12-17-031206_course_materials/: down.sql  up.sql
atlas-server/migrations/2023-12-17-031327_course_units/: up.sql
atlas-server/migrations/2023-12-20-203217_pop_quizzes/: down.sql  up.sql
atlas-server/src/: main.rs
(+51 files in other folders)
