[package]
name = "atlas_api_routes"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "atlas_api_routes"
path = "src/lib.rs"
doctest = false

[dependencies]
actix-web = { workspace = true }
reqwest = { workspace = true }
atlas_db = { workspace = true }
atlas_db_crud = { workspace = true }
atlas_db_schema = { workspace = true }
atlas_utils = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
