[package]
name = "atlas_db"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "atlas_db"
path = "src/lib.rs"
doctest = false

[dependencies]
diesel = { workspace = true }
dotenv = { workspace = true }
atlas_utils = { workspace = true }
