[package]
name = "atlas_db_schema"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "atlas_db_schema"
path = "src/lib.rs"
doctest = false

[dependencies]
diesel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
